modified album view

--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     {% if all_albums %}
+    <h3>All albums:</h3>
     <ul>
       {% for album in all_albums %}
         <li><a href="/music/{{ album.id }}/">{{ album.title }}</a></li>
