--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>Home</title>
+      <title>Dashboard</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
   <body>
+
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/music/">Dashboard</a>
+        </div>
+    </nav>
+
+      <div>
     {% if all_albums %}
     <h3>All albums:</h3>
     <ul>
@@ -15,5 +29,6 @@
     {% else %}
       <h3>There are no albums</h3>
     {% endif %}
+  </div>
   </body>
 </html>
