created createView, DeleteView and UpdateView

--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -6,7 +6,20 @@
   <h3>All albums:</h3>
   <ul>
     {% for album in all_albums %}
-      <li><a href="{% url 'music:details' album.id %}">{{ album.title }}</a></li>
+      <li><a href="{% url 'music:details' album.id %}">{{ album.title }} - {{ album.artist }}</a></li>
+
+      <form action="{% url 'music:album-delete' album.id %}" method='post' style="display: inline;">
+        {% csrf_token %}
+        <input type="hidden" name="album_id" value="{{ album.id }}"/>
+        <button type="submit" class="btn btn-danger btn-sm">
+            <span class="glyphicon glyphicon-trash"></span>
+        </button>
+      </form>
+
+      <form action="{% url 'music:album-update' album.id %}" style="display: inline;">
+        <button type="Submit" class="btn btn-basic btn-sm">Update</button>
+      </form>
+
     {% endfor %}
   </ul>
   {% else %}
