--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <html lang="en">
@@ -16,24 +17,31 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="{% url 'music:index' %}">Dashboard</a>
         </div>
-
-        {% if user.username %}
-        <ul class="nav navbar-nav navbar-right">
-          <li class="">
-            <a href="album/add/">
-              <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; Add Album
-            </a>
-          </li>
-          <li class="">
-            <a href="">
-              <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>&nbsp; Logout
-            </a>
-          </li>
-        </ul>
-        {% endif %}
       </div>
     </nav>
-    {% block body %}
-    {% endblock %}
-  </body>
+    <div class="container-fluid">
+
+        <div class="row">
+
+          <div class="con-sm-12 con-md-7">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <h3> Login</h3>
+                <form class="form-horizontal" action="" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% include 'music/form-template.html' %}
+                <div class="form-group">
+                  <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-success">Submit</button>
+                  </div>
+                </div>
+                </form>
+
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </body>
 </html>
