Moving templates to templates folder under the project

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,24 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title> {% block title %}My Dashboard{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  </head>
-  <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
+{% extends 'music/base.html' %}
 
-        <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'music:index' %}">Dashboard</a>
-        </div>
+{% block title %}Home{% endblock %}
 
+  {% block content %}
         {% if user.is_authenticated %}
-        <h3>Hi {{ user.username }}</h3>
+        <h3>Hi {{ user.username }}!</h3>
         <ul class="nav navbar-nav navbar-right">
           <li class="">
             <a href="album/add/">
@@ -26,15 +12,15 @@
             </a>
           </li>
           <li class="">
-            <a href="{% url 'logout' %} ">
-              <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>&nbsp; Logout
+            <a href="{% url 'login' %} ">
+              <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>&nbsp; Login
             </a>
           </li>
         </ul>
         {% else %}
         <ul class="nav navbar-nav navbar-right">
           <li class="">
-            <a href="album/add/">
+            <a href="music/album/add/">
               <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; Register
             </a>
           </li>
@@ -45,10 +31,4 @@
           </li>
         </ul>
         {% endif %}
-
-      </div>
-    </nav>
-    {% block body %}
     {% endblock %}
-  </body>
-</html>
