--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,8 @@
       <div class="container-fluid">
 
         <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'music:index' %}">Dashboard</a>
+          <a class="navbar-brand" href="/music/">Dashboard</a>
         </div>
-
-        {% if user.username %}
         <ul class="nav navbar-nav navbar-right">
           <li class="">
             <a href="album/add/">
@@ -25,12 +23,12 @@
             </a>
           </li>
           <li class="">
-            <a href="">
+            <a href="{% url 'logout' %} ">
               <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>&nbsp; Logout
             </a>
           </li>
         </ul>
-        {% endif %}
+
       </div>
     </nav>
     {% block body %}
