--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
-{% extends 'music/base.html' %}
+{% extends 'base.html' %}
 {% block body %}
 
 {% if user.is_authenticated %}
+
     <p>Welcome {{ user.username }} !!!</p>
 
     {% if all_albums %}
@@ -24,6 +25,7 @@
 
       {% endfor %}
     </ul>
+
     {% else %}
       <h3>There are no albums</h3>
     {% endif %}
@@ -54,4 +56,4 @@
 </div>
 
 {% endif %}
-    {% endblock %}
+{% endblock %}
