--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li class="">
-            <a href="album/add/">
+            <a href="{% url 'music:album-add' %}">
               <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; Add Album
             </a>
           </li>
