--- a/templates/details.html
+++ b/templates/details.html
@@ -1,4 +1,4 @@
-{% extends 'music/base.html' %}
+{% extends 'base.html' %}
 <title> {% block title %}Album details{% endblock %}</title>
 
 {% block body %}
