--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
           <h3> Login</h3>
           <form class="form-horizontal" action="" method="post" enctype="multipart/form-data">
               {% csrf_token %}
-              {% include 'music/form-template.html' %}
+              {% include 'form-template.html' %}
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                   <button type="submit" class="btn btn-success">Submit</button>
