--- a/templates/music/album_form.html
+++ b/templates/music/album_form.html
@@ -1,4 +1,4 @@
-{% extends 'music/base.html' %}
+{% extends 'base.html' %}
 {% block title %}Add a New Album{% endblock %}
 {% block albums_active %}active{% endblock %}
 
@@ -14,7 +14,7 @@
 
           <form class="form-horizontal" action="" method="post" enctype="multipart/form-data">
               {% csrf_token %}
-              {% include 'music/form-template.html' %}
+              {% include 'form-template.html' %}
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                   <button type="submit" class="btn btn-success">Submit</button>
