--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
 
+        {% if user.is_authenticated %}
         <div class="navbar-header">
           <a class="navbar-brand" href="/music/">Dashboard</a>
         </div>
@@ -29,6 +30,24 @@
           </li>
         </ul>
 
+        {% else %}
+
+        <div class="navbar-header">
+          <a class="navbar-brand" href="{% url 'index' %}">Dashboard</a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="">
+            <a href="{% url 'signup' %} ">
+              <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>&nbsp; Signup
+            </a>
+          </li>
+          <li class="">
+            <a href="/users/login">
+              <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>&nbsp; Login
+            </a>
+          </li>
+        </ul>
+        {% endif %}
       </div>
     </nav>
     {% block body %}
