--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -15,7 +15,7 @@
       <div class="container-fluid">
 
         <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'music:index' %}">Dashboard</a>
+          <a class="navbar-brand" href="{% url 'index' %}">Dashboard</a>
         </div>
       </div>
     </nav>
