--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,7 +15,7 @@
       <div class="container-fluid">
 
         <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'music:index' %}">Dashboard</a>
+          <a class="navbar-brand" href="{% url 'index' %}">Dashboard</a>
         </div>
       </div>
     </nav>
@@ -29,7 +29,7 @@
                 <h3>Sign Up</h3>
                 <form class="form-horizontal" action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
-                {% include 'music/form-template.html' %}
+                {% include 'form-template.html' %}
                 <div class="form-group">
                   <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-success">Submit</button>
