--- a/templates/base.html
+++ b/templates/base.html
@@ -10,12 +10,12 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
       <div class="container-fluid">
 
         {% if user.is_authenticated %}
         <div class="navbar-header">
-          <a class="navbar-brand" href="/music/">Dashboard</a>
+          <a class="navbar-brand" href="{% url 'music:home' %}">Dashboard</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li class="">
