mysterious issue, which was fixed mysteriously

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,10 @@
     </div>
 
     <div class="text-center">
-        <h3>Start by creating an account or loggin in.</h1>
+        <h3>Start by creating an account or log in with an existing one.</h1>
     </div>
 
+    <br>
     <br>
     <div class="text-center">
       <form action="{% url 'login' %}" style="display: inline;">
