--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-default">
       <div class="container-fluid">
 
         {% if user.is_authenticated %}
@@ -37,12 +37,12 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li class="">
-            <a href="{% url 'signup' %} ">
+            <a href="/users/signup/">
               <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>&nbsp; Signup
             </a>
           </li>
           <li class="">
-            <a href="/users/login">
+            <a href="{% url 'login' %}">
               <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>&nbsp; Login
             </a>
           </li>
