--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
           </li>
           <li class="">
             <a href="{% url 'logout' %} ">
-              <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>&nbsp; Logout
+              <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logout
             </a>
           </li>
         </ul>
@@ -37,7 +37,7 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li class="">
-            <a href="/users/signup/">
+            <a href="{% url 'signup' %}">
               <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>&nbsp; Signup
             </a>
           </li>
