--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="text-center">
-        <h3>Start by creating an account or log in with an existing one.</h1>
+        <h3>Start by logging in or by creating a new account.</h1>
     </div>
 
     <br>
