--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,8 @@
     </div>
 
     <div class="text-center">
-        <h3>Start by logging in or by creating a new account.</h1>
+        <h3>Start by logging in or creat a new account.</h1>
     </div>
-
     <br>
     <br>
     <div class="text-center">
